@@ -16,7 +16,7 @@ import org.osm2world.core.map_data.creation.MapProjection;
 import org.osm2world.core.map_data.creation.OSMToMapDataConverter;
 import org.osm2world.core.map_data.data.MapData;
 import org.osm2world.core.map_elevation.creation.ElevationCalculator;
-import org.osm2world.core.map_elevation.creation.ForceElevationCalculator;
+import org.osm2world.core.map_elevation.creation.ZeroElevationCalculator;
 import org.osm2world.core.math.AxisAlignedBoundingBoxXZ;
 import org.osm2world.core.osm.creation.JOSMFileHack;
 import org.osm2world.core.osm.creation.OsmosisReader;
@@ -149,7 +149,7 @@ public class ConversionFacade {
 	}
 	
 	private ElevationCalculator elevationCalculator =
-		new ForceElevationCalculator();
+		new ZeroElevationCalculator();
 	
 	/**
 	 * sets the {@link ElevationCalculator} that is used during subsequent calls
